--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="cashback">
             <div class="cashitem">
               <img
-                src="https://lh3.googleusercontent.com/FWYZD9C5xgiAmxl-j6OjiIes8oTkmNEp1kKW8nu5stgDwtNqUR8g3wYQ3veCw7BLD3bqYzWikQqq9jr-lbuorRlSCB2BhjuYPszXi7g"
+                src="/1.png"
                 alt="cashback1"
               />
             </div>
